Update RagBotView.java