@@ -8,6 +8,7 @@ import com.vaadin.flow.component.html.H1;
 import com.vaadin.flow.component.html.Image;
 import com.vaadin.flow.component.icon.Icon;
 import com.vaadin.flow.component.icon.VaadinIcon;
+import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.orderedlayout.FlexComponent;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
@@ -15,14 +16,18 @@ import com.vaadin.flow.component.textfield.TextArea;
 import com.vaadin.flow.router.Route;
 import com.vaadin.flow.spring.annotation.SpringComponent;
 import com.vaadin.flow.spring.annotation.UIScope;
-import com.vaadin.flow.component.notification.Notification;
 
-import org.springframework.http.MediaType;
+// Neue Imports für Markdown
+import org.commonmark.node.Node;
+import org.commonmark.parser.Parser;
+import org.commonmark.renderer.html.HtmlRenderer;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @SpringComponent
 @UIScope
@@ -33,7 +38,7 @@ public class RagBotView extends HorizontalLayout {
     public RagBotView() {
         setSizeFull();
 
-        // Linke Navigationsleiste
+        // --- Linke Navigationsleiste ---
         VerticalLayout navBar = new VerticalLayout();
         navBar.addClassName("navbar");
         navBar.setWidth("20%");
@@ -41,28 +46,25 @@ public class RagBotView extends HorizontalLayout {
         navBar.setSpacing(true);
         navBar.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.START);
 
-        // Navbar-Inhalt
+        // Logo Bereich
         Image img = new Image("logo2.png", "de");
         img.setWidth("150px");
         img.setHeight("80px");
-
 
         Div logoDiv = new Div();
         logoDiv.setWidth("250px");
         logoDiv.setHeight("100px");
         logoDiv.getStyle().set("background-image", "url('logo2.png')");
-        logoDiv.getStyle().set("background-size", "contain");  // passt Bild an Div an
+        logoDiv.getStyle().set("background-size", "contain");
         logoDiv.getStyle().set("background-repeat", "no-repeat");
         logoDiv.getStyle().set("background-position", "center");
-
 
         Div spacer = new Div();
         spacer.setHeight("100px");
 
-
-
+        // Links
         Anchor impressumLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Impressum");
-        impressumLink.setTarget("_blank"); // öffnet in neuem Tab
+        impressumLink.setTarget("_blank");
 
         Anchor datenschutzLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Datenschutzinformation");
         datenschutzLink.setTarget("_blank");
@@ -70,44 +72,42 @@ public class RagBotView extends HorizontalLayout {
         Anchor barrierefreiheitLink = new Anchor("https://www.fit.fraunhofer.de/de/jobs.html", "Barrierefreiheitserklärung");
         barrierefreiheitLink.setTarget("_blank");
 
-        // Icons
+        // Icons & Layouts für Links
         Icon checkIcon = new Icon(VaadinIcon.CHECK_CIRCLE);
-        checkIcon.setSize("14px"); // Größe anpassen
+        checkIcon.setSize("14px");
         checkIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout barriereLayout = new HorizontalLayout( checkIcon , barrierefreiheitLink);
+        HorizontalLayout barriereLayout = new HorizontalLayout(checkIcon, barrierefreiheitLink);
         barriereLayout.setAlignItems(FlexComponent.Alignment.CENTER);
 
         Icon bookIcon = new Icon(VaadinIcon.OPEN_BOOK);
         bookIcon.setSize("14px");
         bookIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout datenschutzLayout = new HorizontalLayout(bookIcon , datenschutzLink);
+        HorizontalLayout datenschutzLayout = new HorizontalLayout(bookIcon, datenschutzLink);
         datenschutzLayout.setAlignItems(FlexComponent.Alignment.CENTER);
 
         Icon caretIcon = new Icon(VaadinIcon.CLOCK);
         caretIcon.setSize("14px");
         caretIcon.getStyle().set("margin-left", "5px");
-        HorizontalLayout impressumLayout = new HorizontalLayout(caretIcon ,impressumLink);
+        HorizontalLayout impressumLayout = new HorizontalLayout(caretIcon, impressumLink);
         impressumLayout.setAlignItems(FlexComponent.Alignment.CENTER);
-
 
         Div ragLabel = new Div();
         ragLabel.setText("RAG-Bot");
-        ragLabel.getStyle().set("margin-top", "auto"); // nach unten schieben
+        ragLabel.getStyle().set("margin-top", "auto");
         ragLabel.getStyle().set("font-size", "24px");
         ragLabel.getStyle().set("font-weight", "bold");
         ragLabel.getStyle().set("color", "white");
         ragLabel.getStyle().set("font-style", "italic");
 
+        navBar.add(logoDiv, spacer, impressumLayout, datenschutzLayout, barriereLayout, ragLabel);
 
-        navBar.add(logoDiv ,spacer , impressumLayout , datenschutzLayout, barriereLayout , ragLabel);
-
-        // Hauptbereich
+        // --- Hauptbereich ---
         VerticalLayout mainLayout = new VerticalLayout();
         mainLayout.setSizeFull();
         mainLayout.setPadding(false);
         mainLayout.setSpacing(false);
 
-        // Header mit Buttons
+        // Header
         HorizontalLayout header = new HorizontalLayout();
         header.addClassName("chat-header");
         header.setWidthFull();
@@ -119,10 +119,6 @@ public class RagBotView extends HorizontalLayout {
         ragBotButton.addClassName("button-ragbot");
         ragBotButton.addClassName("button-selected");
 
-
-
-
-
         header.add(chatbotButton, ragBotButton);
         header.setAlignItems(FlexComponent.Alignment.CENTER);
 
@@ -132,45 +128,41 @@ public class RagBotView extends HorizontalLayout {
 
         // Nachrichtenbereich
         Div messageArea = new Div();
+        messageArea.addClassName("chat-area"); // Klasse aus CSS nutzen
         messageArea.setWidthFull();
-        messageArea.setHeightFull(); // wichtig
+        // Standard-Text
+        Div placeholder = new Div();
+        placeholder.setText("\uD83E\uDD16 Hier steht die Antwort des LLM...");
+        placeholder.getStyle().set("font-style", "italic");
+        messageArea.add(placeholder);
 
-        messageArea.getStyle().set("overflow-y", "auto");
-        messageArea.getStyle().set("padding", "8px");
-        messageArea.getStyle().set("background-color", "#FFFFFF");
-        messageArea.setText("\uD83E\uDD16 Hier steht die Antwort des LLM...");
-        messageArea.getStyle().set("font-style", "italic");
         mainLayout.expand(messageArea);
-
 
         // Eingabefeld
         HorizontalLayout inputLayout = new HorizontalLayout();
+        inputLayout.addClassName("input-layout");
         inputLayout.setWidthFull();
 
         TextArea inputField = new TextArea();
         inputField.setPlaceholder("Wie kann ich dir weiterhelfen?");
         inputField.addClassName("input-field");
         inputField.setWidthFull();
-        inputField.getStyle().set("resize", "none");// verhindert manuelles Ändern
-        
+        inputField.getStyle().set("resize", "none");
 
-        // Dynamisches Wachsen JavaScript Code
+        // JavaScript für dynamische Höhe
         inputField.getElement().executeJs(
                 "this.style.height='auto';" +
                         "this.style.overflowY='hidden';" +
                         "this.addEventListener('input', function() {" +
-                        "  this.style.height='auto';" +               // zurücksetzen
-                        "  this.style.height=(this.scrollHeight) + 'px';" + // an Inhalt anpassen
+                        "  this.style.height='auto';" +
+                        "  this.style.height=(this.scrollHeight) + 'px';" +
                         "});"
         );
-
-
 
         Button sendButton = new Button(new Icon(VaadinIcon.PAPERPLANE));
         sendButton.addClassName("send-button");
 
-
-        //Micro
+        // Mikrofon Button
         Button micButton = new Button(new Icon(VaadinIcon.MICROPHONE));
         micButton.addClassName("mic-button");
         micButton.getElement().setAttribute("title", "Spracheingabe starten");
@@ -186,87 +178,80 @@ public class RagBotView extends HorizontalLayout {
                             "  recognition.onresult = function(event) {" +
                             "    let text = event.results[0][0].transcript;" +
                             "    $0.value = text;" +
-                            "    $0.dispatchEvent(new Event('input', { bubbles: true }));" +   // wichtig für Vaadin
-                            "    $0.dispatchEvent(new Event('change', { bubbles: true }));" + // extra, falls nötig
+                            "    $0.dispatchEvent(new Event('input', { bubbles: true }));" +
+                            "    $0.dispatchEvent(new Event('change', { bubbles: true }));" +
                             "  };" +
                             "  recognition.start();" +
                             "}"
                     , inputField.getElement());
         });
 
-
-        inputLayout.add(inputField, sendButton , micButton);
+        inputLayout.add(inputField, sendButton, micButton);
         inputLayout.setFlexGrow(1, inputField);
 
-
-        // Klick-Listener: Anfrage an Backend senden
+        // --- Klick-Listener ---
         sendButton.addClickListener(e -> {
             String query = inputField.getValue().trim();
             if (!query.isEmpty()) {
-                String answer = callBackend(query);  // hier wird reiner Text zurückgegeben
+                // Platzhalter entfernen beim ersten Mal
+                if (messageArea.getChildren().anyMatch(c -> c == placeholder)) {
+                    messageArea.remove(placeholder);
+                }
 
                 // User-Nachricht anzeigen
                 Div userMessage = new Div();
                 userMessage.setText("User Frage: " + query);
                 userMessage.getStyle().set("font-weight", "bold");
-                userMessage.getStyle().set("margin-bottom", "5px");
+                userMessage.getStyle().set("margin-bottom", "10px");
+                userMessage.getStyle().set("color", "#333");
                 messageArea.add(userMessage);
 
-                // Bot-Antwort 1:1 wie Backend
+                // Backend aufrufen (Markdown Text holen)
+                String answerMarkdown = callBackend(query);
+
+                // Markdown zu HTML konvertieren
+                String htmlContent = convertMarkdownToHtml(answerMarkdown);
+
+                // Bot-Antwort anzeigen (HTML rendern)
                 Div botMessage = new Div();
-                botMessage.setText(answer);
-                botMessage.getStyle().set("margin-bottom", "10px");
-                botMessage.getStyle().set("background-color", "#E5E7EB");
-                botMessage.getStyle().set("padding", "5px");
-                botMessage.getStyle().set("border-radius", "5px");
+                botMessage.addClassName("bot-message-markdown"); // CSS Klasse für Styling
+                botMessage.getElement().setProperty("innerHTML", htmlContent);
+                
                 messageArea.add(botMessage);
 
                 // Scrollen nach unten
                 messageArea.getElement().executeJs("this.scrollTop = this.scrollHeight");
 
-                // Eingabefeld leeren
+                // Input leeren
                 inputField.clear();
-                inputField.getElement().executeJs(
-                        "this.style.height='auto';" +
-                                "this.style.overflowY='hidden';"
-                );
+                inputField.getElement().executeJs("this.style.height='auto';");
             } else {
                 Notification.show("Bitte geben Sie eine Frage ein!");
             }
         });
 
-
-
-
-
-
-        // Alles zum mainLayout hinzufügen
-        mainLayout.add(header, chatTitle, messageArea, inputLayout);
-        mainLayout.expand(messageArea);
-
         // Layout zusammenbauen
+        mainLayout.add(header, chatTitle, messageArea, inputLayout);
+        
         add(navBar, mainLayout);
         setFlexGrow(1, mainLayout);
     }
 
-
-
-    // Methode: Anfrage an dein Spring Boot Backend
-
+    // --- Hilfsmethode: Backend Aufruf ---
     private String callBackend(String query) {
         try {
-            String urlString = "http://localhost:8066/chat?query=" + java.net.URLEncoder.encode(query, "UTF-8");
+            String urlString = "http://localhost:8066/chat?query=" + URLEncoder.encode(query, StandardCharsets.UTF_8);
             URL url = new URL(urlString);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "text/plain");
 
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream(), "UTF-8"));
+            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
             String inputLine;
             StringBuilder response = new StringBuilder();
 
             while ((inputLine = in.readLine()) != null) {
-                response.append(inputLine);
+                response.append(inputLine).append("\n"); // Newline wichtig für Markdown
             }
             in.close();
             conn.disconnect();
@@ -274,11 +259,16 @@ public class RagBotView extends HorizontalLayout {
             return response.toString();
         } catch (Exception e) {
             e.printStackTrace();
-            return "Fehler beim Abrufen der Antwort vom Backend.";
+            return "**Fehler:** Die Antwort konnte nicht vom Backend geladen werden.";
         }
     }
 
-
-
-
+    // --- Hilfsmethode: Markdown zu HTML ---
+    private String convertMarkdownToHtml(String markdown) {
+        if (markdown == null || markdown.isEmpty()) return "";
+        Parser parser = Parser.builder().build();
+        Node document = parser.parse(markdown);
+        HtmlRenderer renderer = HtmlRenderer.builder().build();
+        return renderer.render(document);
+    }
 }
